# aegis-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
aegis/: _loader.py  aegis128l.py  aegis128x2.py  aegis128x4.py  aegis256.py  aegis256x2.py  aegis256x4.py
examples/: aegis256x4_demo.py  benchmark.py
pyaegis/: _loader.py  aegis128l.py  aegis128x2.py  aegis128x4.py  aegis256.py  aegis256x2.py  aegis256x4.py  aegis_cdef.h  util.py
tests/: test_encrypt.py  test_mac.py  test_raises.py  util.py
tools/: build_hook.py  gen_cdef.py  gen_modules.py  generate.py  release.py
