[build-system]
requires = ["setuptools>=61.0", "cffi>=2.0.0", "setuptools-scm>=8.0"]
build-backend = "build_backend"
backend-path = ["tools"]

[project]
name = "aeg"
dynamic = ["version"]
description = "Python bindings for libaegis"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]
dependencies = [
    "cffi>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/LeoVasanko/aeg"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aeg"]

[tool.setuptools.package-data]
aeg = ["*.h", "*.so", "*.pyd"]

[tool.setuptools_scm]
